prevent image overflow in question cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -96,3 +96,7 @@ form#sesssion-control {
   display: flex;
   align-items: center;
 }
+
+div#accordion img {
+  max-width: 100%;
+}
